src/less/quadrone/npc.css
.tidy5e-sheet.application:where(.quadrone.npc) {
  --t5e-background-image: url('../../modules/tidy5e-sheet/images/banner-npc.jpg');

  .actor-context-row {
    margin-top: var(--t5e-size-2x);
  }

  .challenge-rating {
    border: 0.125rem solid var(--t5e-color-palette-gold-62);
    border-radius: 0.1875rem;
    background-color: var(--t5e-component-card-default);
    height: 3.25rem;
    width: 3.25rem;
    flex-basis: auto;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    margin-top: 0.4375rem;
    gap: 0;

    &:has(.challenge-rating-input) .label {
      margin: 0.0625rem 0 -0.0625rem;
    }

    > * {
      flex: 0;
    }

    .value {
      margin: -0.25rem 0 -0.25rem;
    }

    input[type="text"].challenge-rating-input {
      text-align: center;
      box-shadow: none;

      &:focus {
        border: 1px solid red;
      }
    }
  }

  .ability.initiative {
    position: relative;
    max-width: 4rem;
  }

  /* Basic theme overrides
  /* ------------------------------------------------------------ */
  &.theme-basic .abilities-container,
  .abilities-container.abilities-size-small {
    .initiative-score-container {
      height: 3.75rem;
    }
  }

  &.theme-basic .abilities-container,
  .abilities-container.abilities-size-compact {
    .initiative-score-container {
      margin-top: 0;
      padding-top: 0;

      .ability-roll-button {
        gap: 0.125rem;
      }
    }
  }

  .loyalty-container {
    padding-top: 0.25rem;

    &:hover,
    &:focus,
    &:active {
      .loyalty-modifier-container {
        opacity: 1;
      }
    }

    .bonus-container {
      background-image: var(--t5e-loyalty-image);
      position: relative;
    }

    .bonus {
      margin-bottom: 0.5rem;
    }

    .label {
      margin-top: -0.25rem;
    }

    .loyalty-modifier-container {
      bottom: -0.25rem;
      display: flex;
      flex-direction: row;
      opacity: 0;
      position: absolute;
      transition: opacity var(--t5e-transition-duration) var(--t5e-transition-timing-function);

      i {
        font-size: var(--font-size-14);
      }
    }
  }

  .sidebar {
    .trait-hit-dice {
      .hit-dice-container {
        padding-right: 0.5rem;
      }
    }

    .npc-score-tracker {
      .card-header h3 {
        padding-top: 0;
      }

      .uses {

        .max,
        .value {
          width: 1.5rem;
        }
      }
    }

    .lair-tracker {
      margin-top: var(--t5e-size-2x);

      .card-content {
        display: flex;
        padding: var(--t5e-size-2x) var(--t5e-size-2x) 0 0;
      }
    }
  }

  &.sheet-mode-edit .sidebar .npc-score-tracker {
    .uses .max {
      padding: 0 var(--t5e-size-2x);
    }
  }

  /* TABS
  /* ------------------------------------------------------------ */
}

